# attio-fivetran-workflow-status-sync

./: .gitignore  README.md  attio_application.py  attio_attribute_fetcher.py  attio_attribute_fetcher_test.py  attio_client.py  attio_workflow_status_fetcher.py  connector.py  helpers.py  main.py  pyproject.toml  requirements.txt  settings.py  test_script.py
attio_types/: attio_application.py  attio_application_workflow_status_atttribute.py
types/: attio_application_workflow_status_atttribute.py
